[Bug Report] Bad organization of Replenish Report References: https://github.com/adempiere/adempiere/issues/4325